added new profile page

--- a/views/profile.html
+++ b/views/profile.html
@@ -251,7 +251,7 @@
 		}
 		.setbutton{
 		   position:relative;
-			left:31%;
+			left:75%;
 		 }
 		.modal-header {
 
@@ -310,6 +310,10 @@
 		   color:red;
 		   font-size:12px;
 		   display:none;
+		}
+		.fa-check-square-o{
+		  color:green;
+		  font-size:20px;
 		}
 
 
@@ -416,15 +420,11 @@
 				</form>
 				     <button type="submit" class="btn btn-warning btn-lg trbtn" id="trigger_trade" data-toggle="modal" data-target="#">Trigger trade</button>
 				    <div class="upload_kyc" style="display:none;">
-						<a href="http://localhost:63342/bigstylist/views/tradepage.html?_ijt=4kj0o0adc84bucjsoe87rcplq6"><button class="btn btn-warning btn-lg trbtn setbutton" data-toggle="modal" data-target="#">Need to upload</button></a>
-						<a href="http://localhost:63342/bigstylist/views/tradepage.html?_ijt=4kj0o0adc84bucjsoe87rcplq6"><button class="btn btn-warning btn-lg trbtn setbutton" data-toggle="modal" data-target="#">Upload</button></a>
+						<p><i class="fa fa-check-square-o" aria-hidden="true"></i> KYC Done</p>
+						<p><i class="fa fa-check-square-o" aria-hidden="true"></i> KYC Not Verified</p>
+						<a href="http://localhost:63342/bigstylist/views/tradepage.html?_ijt=4kj0o0adc84bucjsoe87rcplq6"><button class="btn btn-warning btn-lg trbtn setbutton" data-toggle="modal" data-target="#">Proceed</button></a>
 					</div>
-
-
 			</div>
-
-
-
 		</div>
 	</div>
 </div>
@@ -445,7 +445,6 @@
 				<p>Pls hang on while we set this trade up<br/> on the blockchain. This will make the trade<br/> secure & transparent. this may<br/> take a few minutes. </p>
 				<h4>You can close this window now</h4>
 			</div>
-
 		</div>
 	</div>
 </div>
