--- a/views/roleselection.ejs
+++ b/views/roleselection.ejs
@@ -145,7 +145,7 @@
             <img src="/images/zeonlab_logo.png" class="zlogo">
             <h1 class="loginh1">Please choose trade type</h1>
             <!-- SIGNUP FORM -->
-            <form action="/roleselection" method="post" enctype = "multipart/form-data" >
+            <form action="/profile" method="post" enctype = "multipart/form-data" >
                 <div class="form-group">
                     <label>Trade with?(Select any one):</label><br>
                     <div class="rdbx">
