--- a/views/login.ejs
+++ b/views/login.ejs
@@ -73,7 +73,7 @@
     <!-- LOGIN FORM -->
     <form action="/login" method="post">
         <div class="form-group">
-            <input type="email" class="form-control" name="username" placeholder="Email ID">
+            <input type="text" class="form-control" name="username" placeholder="Username">
             <span class="fa fa-user icon"></span>
         </div>
         <div class="form-group">
