--- a/views/profile1.ejs
+++ b/views/profile1.ejs
@@ -358,20 +358,18 @@
 			</div>
 			<div class="well" id="triggertradeform"  style="display:none">
 				<h3> Start new trade </h3>
-				<form>
-					<input type="hidden" id="bank_id" name="bank_id" value=<%= username %>></input>
+				<form action="/triggertradenew" method="post" enctype = "multipart/form-data" >
+					<input type="hidden" id="manufacturer_id" name="manufacturer_id" value=<%= username %>></input>
 					<input type="hidden" id="user" name="user" value=<%= user %>></input>
-					<input type="hidden" id="senderpage" name="senderpage" value="Bank"></input>
 					<input type="text" class="form-control" id="supplier_id" name="supplier_id" placeholder="Supplier User Name"></input>
-					<span class="fa fa-user icon"></span><br>
-					<input type="text" class="form-control" id="manufacturer_id" name="_id" placeholder="Manufacturer User Name"></input>
 					<span class="fa fa-user icon"></span><br>
 					<input type="text" class="form-control" id="bank_id" name="bank_id" placeholder="Bank User Name"></input>
 					<span class="fa fa-bank icon"></span><br>
 					<input type="text" class="form-control" id="shipper_id" name="shipper_id" placeholder="Shipper User Name"></input>
 					<span class="fa fa-truck icon"></span><br>
+					<button type="submit" class="btn btn-warning btn-lg loginbtn">Trigger trade</button>
 				</form>
-				<button class="btn btn-warning btn-lg trbtn" data-toggle="modal" data-target="#triggermodal" onclick="tradefun()">Trigger trade</button>
+				<!--<button class="btn btn-warning btn-lg trbtn" data-toggle="modal" data-target="#triggermodal" onclick="tradefun()">Trigger trade</button>-->
 			</div>
 		</div>
 	</div>
@@ -480,10 +478,10 @@
 		timestamp = new Date( parseInt( timestamp, 16 ) * 1000 ).toString();
 		var indx = timestamp.indexOf('GMT');
 		if(statusList[i] == "Ethereum Transaction Pending!!! Check after 2 mins!!!"){
-			tr += '<td style="display:none;">' + tradeList[i] + '</td><td class="trackId">' + tradeList[i].slice(0,3) + '...' +  tradeList[i].slice(20,24) + "</td><td>" + supplierList[i] + "</td><td>" + manufacturerList[i] + "</td><td>" + timestamp.slice(0, indx) + "</td>"+'<td><button href='+tradeList[i]+' class="viewbtn" style="display:none" onclick="getTradeDetails(this)"><img src="/images/View.png" class="viewimg">View</button><img src="/images/loader.gif" style="display:block" class="loaderbtngif"></td></tr>';
+			tr += '<td style="display:none;">' + tradeList[i] + '</td><td class="trackId">' + tradeList[i].slice(0,3) + '...' +  tradeList[i].slice(20,24) + "</td><td>" + manufacturerList[i] + "</td><td>" + supplierList[i] + "</td><td>" + timestamp.slice(0, indx) + "</td>"+'<td><button href='+tradeList[i]+' class="viewbtn" style="display:none" onclick="getTradeDetails(this)"><img src="/images/View.png" class="viewimg">View</button><img src="/images/loader.gif" style="display:block" class="loaderbtngif"></td></tr>';
 		}
 		else{
-			tr += '<td style="display:none;">' + tradeList[i] + '</td><td class="trackId">' + tradeList[i].slice(0,3) + '...' +  tradeList[i].slice(20,24) + "</td><td>" + supplierList[i] + "</td><td>" + manufacturerList[i] + "</td><td>" + timestamp.slice(0, indx) + "</td>"+'<td><button href='+tradeList[i]+' class="viewbtn" onclick="getTradeDetails(this)"><img src="/images/View.png" class="viewimg">View</button><img src="/images/loader.gif" class="loaderbtngif"></td></tr>';
+			tr += '<td style="display:none;">' + tradeList[i] + '</td><td class="trackId">' + tradeList[i].slice(0,3) + '...' +  tradeList[i].slice(20,24) + "</td><td>" + manufacturerList[i] + "</td><td>" + supplierList[i] + "</td><td>" + timestamp.slice(0, indx) + "</td>"+'<td><button href='+tradeList[i]+' class="viewbtn" onclick="getTradeDetails(this)"><img src="/images/View.png" class="viewimg">View</button><img src="/images/loader.gif" class="loaderbtngif"></td></tr>';
 		}
 		thead.innerHTML = '<tr><th>Tracking ID</th><th>Manufacturer</th><th>Supplier</th><th>Date & Time</th><th>Trade Tracker</th></tr>';
 		tbody.innerHTML = tr + tbody.innerHTML;
