--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -150,7 +150,7 @@
             <!-- SIGNUP FORM -->
             <form action="/signup" method="post" enctype = "multipart/form-data" >
                 <div class="form-group">
-                    <input type="email" class="form-control" name="username" placeholder="Email ID" required>
+                    <input type="text" class="form-control" name="username" placeholder="Username" required>
                     <span class="fa fa-user icon"></span>
                 </div>
                 <div class="form-group">
