--- a/views/profile2.ejs
+++ b/views/profile2.ejs
@@ -359,15 +359,10 @@
 			<div class="well" id="triggertradeform"  style="display:none">
 				<h3> Start new trade </h3>
 				<form>
-					<input type="hidden" id="bank_id" name="bank_id" value=<%= username %>></input>
+					<input type="hidden" id="dealer_id" name="dealer_id" value=<%= username %>></input>
 					<input type="hidden" id="user" name="user" value=<%= user %>></input>
-					<input type="hidden" id="senderpage" name="senderpage" value="Bank"></input>
-					<input type="text" class="form-control" id="dealer_id" name="dealer_id" placeholder="Dealer User Name"></input>
-					<span class="fa fa-user icon"></span><br>
 					<input type="text" class="form-control" id="manufacturer_id" name="_id" placeholder="Manufacturer User Name"></input>
 					<span class="fa fa-user icon"></span><br>
-					<input type="text" class="form-control" id="bank_id" name="bank_id" placeholder="Bank User Name"></input>
-					<span class="fa fa-bank icon"></span><br>
 					<input type="text" class="form-control" id="shipper_id" name="shipper_id" placeholder="Shipper User Name"></input>
 					<span class="fa fa-truck icon"></span><br>
 				</form>
