--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -154,11 +154,14 @@
                     <span class="fa fa-user icon"></span>
                 </div>
                 <div class="form-group">
+                    <input type="email" class="form-control" name="email" placeholder="Email ID" required>
+                    <span class="fa fa-user icon"></span>
+                </div>
+                <div class="form-group">
                     <input type="password" class="form-control" name="password" placeholder="Password" required>
                     <span class="fa fa-lock icon"></span>
                 </div>
                 <label>Upload KYC Doc:</label>
-
                 <div class="form-group">
                     <input type="file" class="form-control" name="file" required>
                 </div>
