--- a/views/tradepage2.ejs
+++ b/views/tradepage2.ejs
@@ -44,15 +44,11 @@
                 <div class="usrinfo">
                     <div class="infoitem">
                         <img src="/images/user_icon.png">
-                        <span><strong>Bank:</strong> <%= bank_id %> </span>
+                        <span><strong>OEM:</strong> <%= seller_id %> </span>
                     </div>
                     <div class="infoitem">
                         <img src="/images/user_icon.png">
-                        <span><strong>Parts Manufacturer:</strong> <%= seller_id %> </span>
-                    </div>
-                    <div class="infoitem">
-                        <img src="/images/user_icon.png">
-                        <span><strong>OEM:</strong> <%= buyer_id %> </span>
+                        <span><strong>Dealer:</strong> <%= buyer_id %> </span>
                     </div>
                     <div class="infoitem">
                         <img src="/images/user_icon.png">
@@ -68,7 +64,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="tradecontainer">
-                    <h4 class="text-center"><strong>Pending Action:</strong> <span class="pendingstatus"></span></h4><br>
+                    <h4 class="text-center"><strong>Pending Action:</strong> <span class="pendingstatus">Purchase Order Uploaded Seller to Approve</span></h4><br>
                     <div class="tradelist">
                         <div class="row kyc_row tradeitem">
                             <div class="col-sm-2 tradeleft text-center">
@@ -529,9 +525,6 @@
 						<input type="hidden" class="form-control" name="seller" value=<%= seller_id %>>
 					</div>
 					<div class="form-group">
-						<input type="hidden" class="form-control" name="buyerBank" value=<%= bank_id %>>
-					</div>
-					<div class="form-group">
 						<input type="number" class="form-control" name="timePeriod" placeholder="Time Period in mins before expiry">
 					</div>
 					<div class="form-group">
@@ -565,9 +558,6 @@
 					</div>
 					<div class="form-group">
 						<input type="hidden" class="form-control" name="seller" value=<%= seller_id %>>
-					</div>
-					<div class="form-group">
-						<input type="hidden" class="form-control" name="buyerBank" value=<%= bank_id %>>
 					</div>
 					<div class="form-group">
 						<p>This agreement contains all textual
