--- a/views/roleselection.ejs
+++ b/views/roleselection.ejs
@@ -149,14 +149,19 @@
                 <div class="form-group">
                     <label>Trade with?(Select any one):</label><br>
                     <div class="rdbx">
-                        <input type="radio" name="role" value="Supplier" id="Supplier" />
-                        <label for="Supplier"><span class="fa fa-handshake-o rimg"></span></label>
-                        <p class="rcont">Supplier</p>
+                        <input type="radio" name="role" value="PARTSSUPPLIERTOOEM" id="PARTSSUPPLIERTOOEM" />
+                        <label for="PARTSSUPPLIERTOOEM"><span class="fa fa-handshake-o rimg"></span></label>
+                        <p class="rcont">PARTSSUPPLIERTOOEM</p>
                     </div>
                     <div class="rdbx">
-                        <input type="radio" name="role" value="Dealer" id="Dealer" />
-                        <label for="Dealer"><span class="fa fa-handshake-o rimg"></span></label>
-                        <p class="rcont">Dealer</p>
+                        <input type="radio" name="role" value="OEMTODEALER" id="OEMTODEALER" />
+                        <label for="OEMTODEALER"><span class="fa fa-handshake-o rimg"></span></label>
+                        <p class="rcont">OEMTODEALER</p>
+                    </div>
+                    <div class="rdbx">
+                        <input type="radio" name="role" value="DEALERTOCUSTOMER" id="DEALERTOCUSTOMER" />
+                        <label for="DEALERTOCUSTOMER"><span class="fa fa-handshake-o rimg"></span></label>
+                        <p class="rcont">DEALERTOCUSTOMER</p>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-warning btn-lg loginbtn">Proceed</button>
