--- a/views/customerlogin.ejs
+++ b/views/customerlogin.ejs
@@ -48,7 +48,7 @@
             font-weight:bold;
 
         }
-        .loginerror, .loginerror2{
+        .loginerror, .loginerror2, .loginerror3{
 
             display:none;
 
@@ -102,16 +102,17 @@
     <div class="loginnext">
     <form action="/login" method="post">
         <div class="alert alert-danger loginerror">Please enter proper aadhar number</div>
+        <div class="alert alert-danger loginerror3">Customer with this Aadhar number does not exist!</div>
         <h5 class="loginh5">Verify your Aadhar number</h5>
         <div class="form-group">
-            <input type="text" class="form-control aadhar" name="Aadhar Number" placeholder="Aadhar Number">
+            <input type="text" id="aadhar" maxLength=12 class="form-control aadhar" name="aadhar" placeholder="Aadhar Number">
         </div>
-        <p>We will text a verification code to this number</p>
+        <p>We will text a verification code to the associated mobile number</p>
     </form>
         <button class="btn btn-warning nextbtn">Next</button>
     </div>
     <div class="loginverify">
-    <form action="/customerlogin" method="post">
+    <form action="/login" method="post">
         <div class="alert alert-danger loginerror2">Please enter proper aadhar number</div>
         <h5 class="loginh5">Please enter verification code</h5>
         <div class="form-group">
@@ -134,18 +135,24 @@
 
         var aadhar = $('.aadhar').val();
         if (aadhar == "" || aadhar.length != 12 || isNaN(aadhar)){
-
             $('.loginerror').show();
             return false;
-
         }
         else{
-
-            $('.loginnext').hide();
-            $('.loginverify').show();
-            $('.aadharshow').html(aadhar);
-
-
+            $.ajax({
+              url: '/validateAadhar',
+              type: 'POST',
+              data: {'aadhar': document.getElementById('aadhar').value},
+              success: function(response) {
+                if (response.success == 'false') {
+                  $('.loginerror3').show();
+                } else {
+                  $('.loginnext').hide();
+                  $('.loginverify').show();
+                  $('.aadharshow').html(aadhar);
+                }
+              }
+            });
         }
 
     });
@@ -166,6 +173,20 @@
         if(res.length != 4){
             $('.loginerror2').show();
         }
+
+        $.ajax({
+          url: '/validateOTP',
+          type: 'POST',
+          success: function(response) {
+            if (response.success == 'false') {
+              $('.loginerror3').show();
+            } else {
+              $('.loginnext').hide();
+              $('.loginverify').show();
+              $('.aadharshow').html(aadhar);
+            }
+          }
+        });
 
     });
 </script>
