--- a/views/profile2.ejs
+++ b/views/profile2.ejs
@@ -335,7 +335,7 @@
 						</thead>
 						<tbody id="ongoing_trades"></tbody>
 					</table>
-					<form id="myform" action="/resumetrade2" method="post" enctype = "application/x-www-form-urlencoded">
+					<form id="myform" action="/resumetrade" method="post" enctype = "application/x-www-form-urlencoded">
 						<input type="hidden" id="trade_id" name="trade_id"></input>
 						<input type="hidden" name="senderpage" value=<%= role %>></input>
 						<input type="hidden" name="username" value=<%= username %>></input>
