--- a/views/profiledetails.ejs
+++ b/views/profiledetails.ejs
@@ -188,7 +188,8 @@
         <p class="pitxt"><img src="/images/Address.png" class="rnd"><strong>Blockchain Address: </strong><span class="pitxt"><%= ethAddress %></span></p><hr>
 
         <p class="pitxt"><img src="/images/Note.png" class="rnd"><strong>Balance: </strong> <%= ethBalance %> Wei</p><hr>
-        <p class="pitxt"><img src="/images/KYC.png" class="rnd"><strong>SHA 256 Hash of KYC Docs </strong><span class="pitxt"><%= kychash %></span></p>
+        <p class="pitxt"><img src="/images/KYC.png" class="rnd"><strong>SHA 256 Hash of KYC Docs </strong></p>
+				<table><tbody id="KYChash"></tbody></table><br>
     </div>
     </div>
 		<div class="col-sm-4">
