--- a/views/profile1.ejs
+++ b/views/profile1.ejs
@@ -335,7 +335,7 @@
 						</thead>
 						<tbody id="ongoing_trades"></tbody>
 					</table>
-					<form id="myform" action="/resumetrade" method="post" enctype = "application/x-www-form-urlencoded">
+					<form id="myform" action="/resumetrade1" method="post" enctype = "application/x-www-form-urlencoded">
 						<input type="hidden" id="trade_id" name="trade_id"></input>
 						<input type="hidden" id="senderpage" name="senderpage" value="<%= role %>"></input>
 						<input type="hidden" name="username" value="<%= username %>"></input>
@@ -361,7 +361,6 @@
 				<form>
 					<input type="hidden" id="manufacturer_id" name="manufacturer_id" value=<%= username %>></input>
 					<input type="hidden" id="user" name="user" value=<%= user %>></input>
-					<input type="hidden" name="tradetype" value="PARTSSUPPLIERTOOEM"></input>
 					<input type="text" class="form-control" id="supplier_id" name="supplier_id" placeholder="Supplier User Name"></input>
 					<span class="fa fa-user icon"></span><br>
 					<input type="text" class="form-control" id="bank_id" name="bank_id" placeholder="Bank User Name"></input>
