--- a/views/profile2.ejs
+++ b/views/profile2.ejs
@@ -337,8 +337,8 @@
 					</table>
 					<form id="myform" action="/resumetrade" method="post" enctype = "application/x-www-form-urlencoded">
 						<input type="hidden" id="trade_id" name="trade_id"></input>
-						<input type="hidden" name="senderpage" value=<%= role %>></input>
-						<input type="hidden" name="username" value=<%= username %>></input>
+						<input type="hidden" id="senderpage" name="senderpage" value="<%= role %>"></input>
+						<input type="hidden" name="username" value="<%= username %>"></input>
 					</form>
 				</div>
 			</div>
@@ -399,14 +399,13 @@
 <script>
 	function tradefun() {
 		var xhttp = new XMLHttpRequest();
-		var bank_id = encodeURIComponent(document.getElementById("bank_id").value);
 		var user = encodeURIComponent(document.getElementById("user").value);
+		var tradetype = encodeURIComponent(document.getElementById("tradetype").value);
 		var senderpage = encodeURIComponent(document.getElementById("senderpage").value);
 		var dealer_id = encodeURIComponent(document.getElementById("dealer_id").value);
 		var manufacturer_id = encodeURIComponent(document.getElementById("manufacturer_id").value);
-		var bank_id = encodeURIComponent(document.getElementById("bank_id").value);
 		var shipper_id = encodeURIComponent(document.getElementById("shipper_id").value);
-		var parameters = "bank_id=" + bank_id + "&user=" + user + "&senderpage=" + senderpage + "&dealer_id=" + dealer_id + "&manufacturer_id=" + manufacturer_id + "&bank_id=" + bank_id + "&shipper_id=" + shipper_id;
+		var parameters = "user=" + user + "&senderpage=" + senderpage +  "&tradeType=" + tradetype + "&dealer_id=" + dealer_id + "&manufacturer_id=" + manufacturer_id + "&shipper_id=" + shipper_id;
 
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
@@ -423,7 +422,7 @@
 					if(res.status == "Ethereum Transaction Pending!!! Check after 2 mins!!!"){
 						thead.innerHTML = '<tr><th>Tracking ID</th><th>Dealer</th><th>Manufacturer</th><th>Date & Time</th><th>Trade Tracker</th></tr>';
 						tbody.innerHTML = '<tr><td style="display:none;">' + res.tradeID + '</td><td class="trackId">' + res.tradeID.slice(0,3) + '...' +  res.tradeID.slice(20,24) + "</td><td>" + res.buyer + "</td><td>" + res.seller + "</td><td>" + timestamp.slice(0, indx) + "</td>"+'<td><button href='+res.tradeID+' class="viewbtn" style="display: none;" onclick="getTradeDetails(this)"><img src="/images/View.png" class="viewimg" style="display: none;">View</button><img src="/images/loader.gif" style="display:block" class="loaderbtngif"></td></tr><hr style="margin:0px;width:350%"></tr>' + tbody.innerHTML;
-						tradefun2(res.tradeID, res.buyerHash, res.sellerHash, res.buyerBankHash, res.sellerBankHash, res.shipperHash);
+						tradefun2(res.tradeID, res.tradeType, res.dealerHash, res.manufacturerHash, res.shipperHash);
 					}
 				}
 			}
@@ -433,9 +432,9 @@
 		xhttp.send(parameters);
 	}
 
-	function tradefun2(tradeID, buyerHash, sellerHash, buyerBankHash, sellerBankHash, shipperHash){
+	function tradefun2(tradeID, tradeType, dealerHash, manufacturerHash, shipperHash){
 		var xhttp = new XMLHttpRequest();
-		var parameters = "tradeID=" + encodeURIComponent(tradeID)+ "&buyerHash=" + encodeURIComponent(buyerHash) + "&sellerHash=" + encodeURIComponent(sellerHash) + "&buyerBankHash=" + encodeURIComponent(buyerBankHash) + "&sellerBankHash=" + encodeURIComponent(sellerBankHash) + "&shipperHash=" + encodeURIComponent(shipperHash);
+		var parameters = "tradeID=" + encodeURIComponent(tradeID)+ "&tradeType=" + encodeURIComponent(tradeType) + "&manufacturerHash=" + encodeURIComponent(manufacturerHash) + "&dealerHash=" + encodeURIComponent(dealerHash) + "&shipperHash=" + encodeURIComponent(shipperHash);
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
 				location.reload();
